--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <title>BlackCloud</title>
+        <title>iDigital Web Studio</title>
 </head>
 
 <body>
@@ -85,9 +85,8 @@
         <!-- Company Logo -->
 
         <div class="company_logo">
-            <img src="img/logo/Logo2.png" alt="IDigital Web Studio" style="width: 120px; height: 120px;">
-        </div>
-        <!-- <div class="company_name">BlackCloud</div> -->
+            <img src="img/logo/logo2.png" style="width: 100px; height: 100px;"></div>
+            <div class="company_name">iDigital Web Studio</div>
 
         <!-- Block_1_Main -->
 
@@ -117,6 +116,9 @@
 
         <br></br>
 
+        </div>
+
+
         <div style="text-align:center; margin-top: -2%;">
             <span class="dot"></span>
             <span class="dot"></span>
@@ -124,43 +126,19 @@
             <span class="dot"></span>
             <span class="dot"></span>
 
+            <!-- <div class="block_1_text">
+                <span class="block_1_span">WEB</span>
+                <br>
+                <span class="block_2_span">DE</span>
+                <br>
+                <span class="block_3_span">SIG</span>
+                <br>
+                <img src="./img/icons/company.jpg" alt="company" class="block_4_image">
+                <span class="block_4_span">N</span> 
+
+            </div> -->
+
         </div>
-
-
-        <!-- <div class="block_1_container">
-            <div class="block_1_row-container">
-
-                <div class="block_1_logo"> -->
-
-        <!-- <img src='./img/logo/4.png'alt='logo web design'/> -->
-        <!-- <span class="block_1_span">WEB</span> 
-                <div class="block_1_text">
-                    <span class="block_1_span">WEB</span>
-                    <br>
-                    <span class="block_2_span">DE</span>
-                    <br>
-                    <span class="block_3_span">SIG</span>
-                    <br>
-                    <img src="./img/icons/company.jpg" alt="" >
-                    <span class="block_4_span">N</span> -->
-        <!-- <img src="./img/icons/company.jpg" alt=""> -->
-
-        <!-- <span class="block_4_span"></span> -->
-
-
-        <!-- </div>
-                <div class=block_1_column_left>
-                    <div>
-                        <img src="img/img_106.jpg">
-                    </div>
-                </div>
-                <div class=block_1_column_right>
-                    <div>
-                        <img src="img/img_105.jpg">
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
 
         <!-- Block_2_Who We Are -->
@@ -168,22 +146,28 @@
         <div class="block2Row">
             <div class="block2Column_left">
                 <div class="block2Header">
-                    <span>Who We Are</span>
+                    <h4>Who We Are</h4>
                 </div>
                 <div class="block2Text1">
-                    <span>We are creative Web Developing Company, located in Toronto, that turns your ideas into a new driving force 
-                        of your business. Serving ALL Canada and US.</span>
+                    <p class="block2Text1"> We are creative Web Developing Company, located in Toronto, that turns your ideas into a new driving force 
+                        of your business. Our mission is to help your business grow and evolve</p>
                 </div>
                 <div class="block2Text2">
-                    <span>We eager to  understand our customers business goals. Having deep understanding our customers business 
-                        infrastructure helps us to create a sufficient strategy to add value to it, generating return of investment 
-                        (ROI) in shortest term.</span>
+                    <p>We develop websites on turnkey basis different complexity, from landing page to a fully functional online 
+                        store with thousands of products in stock. Our websites will create right experience for users and help you gain new customers.
+                    There is no term "impossible" for us - you give us a task and we just do it. </p>
                 </div>
+                <div class="block2Text1">
+                <p>Serving ALL Canada and US.</p>
+            </div>
+
                 <div class="block2Text3">
-                    <span>Just Call Us Now to Learn More</span>
+                    <p>Contact Us Now to Learn More</p>
                 </div>
                 <div class="block2Text4">
-                    <span>+1-647-676-3661 <span>
+                    <p>+1-647-676-3661 <p> <span class="block2Text5"> or email </span> 
+                        <a class="block2Text6"
+                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
             </div>
             <div class="block2Column_right">
@@ -199,11 +183,11 @@
 
         <div class="block3Row">
             <div class="block3Header">
-                <span>What We Do</span>
+                <h4>What We Do</h4>
             </div>
             <div class="block3Text">
-                <span>Getting online is easy. Succeeding online is a different story. You’ll need more than just a
-                    beautiful website to stand out these days.</span>
+                <p>Getting online is easy. Succeeding online is a different story. You’ll need more than just a
+                    beautiful website to stand out these days.</p>
             </div>
         <div class='block3ColumnStyle'>
             <div class="block3Column">
@@ -258,11 +242,11 @@
 
         <div class="block4Row">
             <div class="block4Header">
-                <span>Let Our Portfolio Reflect Us</span>
+                <h4>Let Our Portfolio Reflect Us</h4>
             </div>
             <div class="block4Text">
-                <span>We understand that every business has a different requirements and we cater to 
-                    them with a great variety of Web Design Services.</span>
+                <p>At iDigital we understand that every business has a different requirements and we cater to 
+                    them with a great variety of Web Design Services.</p>
             </div>
 
             <div class="block4Column">
@@ -431,36 +415,36 @@
         <!-- Creating Scroll Up Button -->
         <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-3x"></i></div>
 
-        <!-- Footer -->
+             <!-- Footer -->
 
-        <footer>
-            <div class="footer">
-                <div class="footerRow">
-                    <div class="footerColumn">
-                    </div>
-                    <div class="footerColumn">
-                        <div class="footer_icon_wrap">
-                            <img src='img/icons/dark_icon_1.png'>
+             <footer>
+                <div class="footer">
+                    <div class="footerRow">
+                        <div class="footerColumn">
                         </div>
-                        <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
-                    </div>
-                    <div class="footerColumn">
-                        <div class="footer_icon_wrap">
-                            <img src='img/icons/dark_icon_2.png'>
+                        <div class="footerColumn">
+                            <div class="footer_icon_wrap icon1">
+                                <img src='img/icons/dark_icon_1.png'>
+                            </div>
+                            <p class="textResponsive" style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
                         </div>
-                        <a class="email-text" style="font-size: 14pt"
-                            href="mailto:example@example.com">sales@idigitalstudio.com</a>
-                    </div>
-                    <div class="footerColumn">
-                        <div class="footer_icon_wrap">
-                            <img src='img/icons/dark_icon_3.png'>
+                        <div class="footerColumn">
+                            <div class="footer_icon_wrap">
+                                <img src='img/icons/dark_icon_2.png'>
+                            </div>
+                            <a class="email-text" style="font-size: 14pt"
+                                href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                         </div>
-                        <p style="font-size: 14pt"> Phone: +1-647-676-3661
+                        <div class="footerColumn">
+                            <div class="footer_icon_wrap">
+                                <img src='img/icons/dark_icon_3.png'>
+                            </div>
+                            <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
+                        </div>
+                        <div class="footerColumn">
+                        </div>
                     </div>
-                    <div class="footerColumn">
-                    </div>
-                </div>
-        </footer>
+            </footer>
     </div>
 
 
