--- a/Portfolio/Activebox.html
+++ b/Portfolio/Activebox.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="../ContactFrom_v4/images/icons/favicon.ico" />
+    <link rel="icon" type="image/png" href="../ContactFrom_v4/images/icons/favicon.ico"/>
     <!--===============================================================================================
         <link rel="stylesheet" type="text/css" href="ContactFrom_v4/vendor/bootstrap/css/bootstrap.min.css">-->
     <!--===============================================================================================-->
@@ -26,193 +26,192 @@
     <!--===============================================================================================-->
     <meta name="format-detection" content="telephone=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
-        rel="stylesheet">
+          rel="stylesheet">
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="../img/logo/favicon.png">
     <!--===============================================================================================-->
     <link rel="stylesheet" href="../css/portfolio_style.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--===============================================================================================-->
     <title>Portfolio</title>
 </head>
 
 <body>
-    <div class="page">
+<div class="page">
 
 
-        <!--Header-->
+    <!--Header-->
 
-        <header class="header" id="myHeader">
+    <header class="header" id="myHeader">
 
-            <!--Right-Sided Navigation-->
+        <!--Right-Sided Navigation-->
 
-            <div class="menu_button">
-                <nav class="wrap-myMenu">
-                    <button class="main-myButton ">
-                        <svg class="ham ham6" viewBox="0 0 100 100" width="70"
-                            onclick="this.classList.toggle('active')">
-                            <path class="line top"
-                                d="m 30,33 h 40 c 13.100415,0 14.380204,31.80258 6.899646,33.421777 -24.612039,5.327373 9.016154,-52.337577 -12.75751,-30.563913 l -28.284272,28.284272" />
-                            <path class="line middle"
-                                d="m 70,50 c 0,0 -32.213436,0 -40,0 -7.786564,0 -6.428571,-4.640244 -6.428571,-8.571429 0,-5.895471 6.073743,-11.783399 12.286435,-5.570707 6.212692,6.212692 28.284272,28.284272 28.284272,28.284272" />
-                            <path class="line bottom"
-                                d="m 69.575405,67.073826 h -40 c -13.100415,0 -14.380204,-31.80258 -6.899646,-33.421777 24.612039,-5.327373 -9.016154,52.337577 12.75751,30.563913 l 28.284272,-28.284272" />
-                        </svg>
-                    </button>
-            </div>
+        <div class="menu_button">
+            <nav class="wrap-myMenu">
+                <button class="main-myButton ">
+                    <svg class="ham ham6" viewBox="0 0 100 100" width="70"
+                         onclick="this.classList.toggle('active')">
+                        <path class="line top"
+                              d="m 30,33 h 40 c 13.100415,0 14.380204,31.80258 6.899646,33.421777 -24.612039,5.327373 9.016154,-52.337577 -12.75751,-30.563913 l -28.284272,28.284272"/>
+                        <path class="line middle"
+                              d="m 70,50 c 0,0 -32.213436,0 -40,0 -7.786564,0 -6.428571,-4.640244 -6.428571,-8.571429 0,-5.895471 6.073743,-11.783399 12.286435,-5.570707 6.212692,6.212692 28.284272,28.284272 28.284272,28.284272"/>
+                        <path class="line bottom"
+                              d="m 69.575405,67.073826 h -40 c -13.100415,0 -14.380204,-31.80258 -6.899646,-33.421777 24.612039,-5.327373 -9.016154,52.337577 12.75751,30.563913 l 28.284272,-28.284272"/>
+                    </svg>
+                </button>
+        </div>
 
-            <ul class="content sidenav">
-                <li><a href='../index.html'>Home</a></li>
-                <li><a href="../About.html">About</a></li>
-                <li><a href="../Services.html">Services</a></li>
-                <li><a href="../Works.html">Works</a></li>
-                <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
-                <li class="phone_navbar">
-                    <span class="phone_highlight"> +1-647</span>
-                    <span>-676-3661 </span>
+        <ul class="content sidenav">
+            <li><a href='../index.html'>Home</a></li>
+            <li><a href="../About.html">About</a></li>
+            <li><a href="../Services.html">Services</a></li>
+            <li><a href="../Works.html">Works</a></li>
+            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li class="phone_navbar">
+                <span class="phone_highlight"> +1-647</span>
+                <span>-676-3661 </span>
+            </li>
+        </ul>
+        </nav>
+
+    </header>
+
+    <div class="company_logo bounceIn animated">
+        <a href="../index.html"> <img src='../img/logo/iDigitalLogo.svg' alt="iDigital" width=250px></a>
+    </div>
+
+    <!-- Breadcrumbs -->
+
+    <div class="breadcrumbs_container">
+        <div class="breadcrumbs_row">
+            <h4 class="breadcrumbs_title">
+                Portfolio </h4>
+            <ol class="breadcrumb">
+                <li class="first-item">
+                    <a href='../index.html'>Home</a>
                 </li>
-            </ul>
-            </nav>
-
-        </header>
-
-        <div class="company_logo">
-            <img src='../img/logo/iDigitalLogo.svg' width=250px />
+                <li class="second-item">
+                    <a href='../Works.html'>Works</a>
+                </li>
+                <li class="last-item">ActiveBox</li>
+            </ol>
         </div>
-
-
-        <!-- Breadcrumbs -->
-
-        <div class="breadcrumbs_container">
-            <div class="breadcrumbs_row">
-                <h4 class="breadcrumbs_title">
-                    Portfolio </h4>
-                <ol class="breadcrumb">
-                    <li class="first-item">
-                        <a href='../index.html'>Home</a>
-                    </li>
-                    <li class="second-item">
-                        <a href='../Works.html'>Works</a>
-                    </li>
-                    <li class="last-item">ActiveBox</li>
-                </ol>
-            </div>
-        </div>
-
-
-        <!-- Block_1 -->
-
-        <div class="block_1">
-            <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_3.jpg' alt="ActiveBox">
-            <div class="block_1_text animate__animated animate__fadeInUp">
-                <h5 align="center">ActiveBox</h5> <br>
-                <p align="justify">Universal template for multipurpose use. Just fill it up with your content and it's
-                    ready to go.
-                    Template is adapted for all types of devices: mobile, tablet, desktop. It's responsive and looks
-                    very beautiful
-                    on every device.</p>
-                <p>Visit Website at : <a href='https://savazh.github.io/activebox/#' class="portfolioLink">ActiveBox</a>
-                </p>
-                <p>Technologies Used: HTML5, CSS3, JavaScript</p>
-            </div>
-        </div>
-
-
-        <!-- Block_2 -->
-
-        <div class="slideshow-container">
-
-            <div class="reviewHeader">What People Say About Us</div>
-
-            <div class="mySlides">
-                <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
-                    company.</q>
-                <p class="author">Thomas</p>
-            </div>
-
-            <div class="mySlides">
-                <q>This is AMAZING!!! I am stunned on the job that their team did for my website! They bring personal
-                    experience to
-                    a whole new level that you simply can't teach. The feedback from my customers are just as
-                    astonished!
-                    Thank you again, I know I definitely made the right choice!</q>
-                <p class="author">Timothy Collier</p>
-            </div>
-
-            <div class="mySlides">
-                <q>Professional and efficient. They did an excellent work redesigning my website with very tight
-                    deadline.
-                    Individual customer approach and post sale service.</q>
-                <p class="author">Justin</p>
-            </div>
-
-            <div class="mySlides">
-                <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
-                    needs.</q>
-                <p class="author">Alison Fagin</p>
-            </div>
-
-
-            <a class="prev" onclick="plusSlides(-1)">❮</a>
-            <a class="next" onclick="plusSlides(1)">❯</a>
-
-        </div>
-
-        <div class="dot-container">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-            <span class="dot" onclick="currentSlide(4)"></span>
-        </div>
-
-
-        <!-- Creating Scroll Up Button -->
-        <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-2x"></i></div>
-
-
-        <!-- Footer -->
-
-        <footer>
-            <div class="footer">
-                <div class="footerRow">
-                    <div class="footerColumn">
-                    </div>
-                    <div class="footerColumn">
-                        <div class="footer_icon_wrap icon1">
-                            <img src='../img/icons/dark_icon_1.png'>
-                        </div>
-                        <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
-                    </div>
-                    <div class="footerColumn">
-                        <div class="footer_icon_wrap">
-                            <img src='../img/icons/dark_icon_2.png'>
-                        </div>
-                        <a class="email-text" style="font-size: 14pt"
-                            href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
-                    </div>
-                    <div class="footerColumn">
-                        <div class="footer_icon_wrap">
-                            <img src='../img/icons/dark_icon_3.png'>
-                        </div>
-                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
-                    </div>
-                    <div class="footerColumn">
-                    </div>
-                </div>
-        </footer>
     </div>
 
 
-    <!--===============================================================================================-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    <!-- Block_1 -->
+
+    <div class="block_1">
+        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_3.jpg' alt="ActiveBox">
+        <div class="block_1_text animate__animated animate__fadeInUp">
+            <h5 align="center">ActiveBox</h5> <br>
+            <p align="justify">Universal template for multipurpose use. Just fill it up with your content and it's
+                ready to go.
+                Template is adapted for all types of devices: mobile, tablet, desktop. It's responsive and looks
+                very beautiful
+                on every device.</p>
+            <p>Visit Website at : <a href='https://savazh.github.io/activebox/#' class="portfolioLink">ActiveBox</a>
+            </p>
+            <p>Technologies Used: HTML5, CSS3, JavaScript</p>
+        </div>
+    </div>
+
+
+    <!-- Block_2 -->
+
+    <div class="slideshow-container">
+
+        <div class="reviewHeader">What People Say About Us</div>
+
+        <div class="mySlides">
+            <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
+                company.</q>
+            <p class="author">Thomas</p>
+        </div>
+
+        <div class="mySlides">
+            <q>This is AMAZING!!! I am stunned on the job that their team did for my website! They bring personal
+                experience to
+                a whole new level that you simply can't teach. The feedback from my customers are just as
+                astonished!
+                Thank you again, I know I definitely made the right choice!</q>
+            <p class="author">Timothy Collier</p>
+        </div>
+
+        <div class="mySlides">
+            <q>Professional and efficient. They did an excellent work redesigning my website with very tight
+                deadline.
+                Individual customer approach and post sale service.</q>
+            <p class="author">Justin</p>
+        </div>
+
+        <div class="mySlides">
+            <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
+                needs.</q>
+            <p class="author">Alison Fagin</p>
+        </div>
+
+
+        <a class="prev" onclick="plusSlides(-1)">❮</a>
+        <a class="next" onclick="plusSlides(1)">❯</a>
+
+    </div>
+
+    <div class="dot-container">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+    </div>
+
+
+    <!-- Creating Scroll Up Button -->
+    <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-2x"></i></div>
+
+
+    <!-- Footer -->
+
+    <footer>
+        <div class="footer">
+            <div class="footerRow">
+                <div class="footerColumn">
+                </div>
+                <div class="footerColumn">
+                    <div class="footer_icon_wrap icon1">
+                        <img src='../img/icons/dark_icon_1.png'>
+                    </div>
+                    <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
+                </div>
+                <div class="footerColumn">
+                    <div class="footer_icon_wrap">
+                        <img src='../img/icons/dark_icon_2.png'>
+                    </div>
+                    <a class="email-text" style="font-size: 14pt"
+                       href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
+                </div>
+                <div class="footerColumn">
+                    <div class="footer_icon_wrap">
+                        <img src='../img/icons/dark_icon_3.png'>
+                    </div>
+                    <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
+                </div>
+                <div class="footerColumn">
+                </div>
+            </div>
+    </footer>
+</div>
+
+
+<!--===============================================================================================-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!--===============================================================================================-->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!--===============================================================================================-->
-    <script src="../scripts/portfolio.js"></script>
-    <!--===============================================================================================-->
-    <script src="../scripts/scroll_up_button.js"></script>
+<!--===============================================================================================-->
+<script src="../scripts/portfolio.js"></script>
+<!--===============================================================================================-->
+<script src="../scripts/scroll_up_button.js"></script>
 
 
 </body>
