--- a/ContactFrom_v6/Contacts.html
+++ b/ContactFrom_v6/Contacts.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="container-contact100-form-btn">
-                <button class="contact100-form-btn">
+                <button class="contact100-form-btn" href="mailto:sales@idigitalstudio.ca">
 						<span>
 							Submit
 							<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
