--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 <div class="container-contact100-form-btn">
                     <div class="wrap-contact100-form-btn">
                         <div class="contact100-form-bgbtn"></div>
-                        <button class="contact100-form-btn">
+                        <button class="contact100-form-btn" href="mailto:sales@idigitalstudio.ca">
                             <span>
                                 Submit
                                 <i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
